melhorando o css e adicionando o header

--- a/index.html
+++ b/index.html
@@ -3,20 +3,24 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Cards</title>
+    <link rel="shotcut icon" href="resources/favicon.png">
+    <title>Cadastro e-commerce</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <h1 class="titulo-principal">Cards</h1>
+        <div class="header">
+            <p><b>Kazanto</b> - Cadastro de produtos e-commerce.
+            <p>
+        </div>
     </header>
 
 
     <div class="container">
         <ul>
             <div class="card">
-                <div> <img src="C:/Users/admin/Git/Kazanto/product-cards-template/resources/img1.jpg" class="imagemcard"> </div>
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
                 <div class="card-text">
                     <span class="date">12/09/2021</span>
                     <h2>29606</h2>
@@ -36,8 +40,7 @@
             </div>
 
             <div class="card">
-                <div class="card-image"> <img src="C:/Users/admin/Git/Kazanto/product-cards-template/resources/img1.jpg"
-                        class="imagemcard"> </div>
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
                 <div class="card-text">
                     <span class="date">12/09/2021</span>
                     <h2>29606</h2>
@@ -57,8 +60,7 @@
             </div>
 
             <div class="card">
-                <div class="card-image"> <img src="C:/Users/admin/Git/Kazanto/product-cards-template/resources/img1.jpg"
-                        class="imagemcard"> </div>
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
                 <div class="card-text">
                     <span class="date">12/09/2021</span>
                     <h2>29606</h2>
@@ -78,8 +80,7 @@
             </div>
 
             <div class="card">
-                <div class="card-image"> <img src="C:/Users/admin/Git/Kazanto/product-cards-template/resources/img1.jpg"
-                        class="imagemcard"> </div>
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
                 <div class="card-text">
                     <span class="date">12/09/2021</span>
                     <h2>29606</h2>
@@ -99,8 +100,7 @@
             </div>
 
             <div class="card">
-                <div class="card-image"> <img src="C:/Users/admin/Git/Kazanto/product-cards-template/resources/img1.jpg"
-                        class="imagemcard"> </div>
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
                 <div class="card-text">
                     <span class="date">12/09/2021</span>
                     <h2>29606</h2>
@@ -120,8 +120,7 @@
             </div>
 
             <div class="card">
-                <div class="card-image"> <img src="C:/Users/admin/Git/Kazanto/product-cards-template/resources/img1.jpg"
-                        class="imagemcard"> </div>
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
                 <div class="card-text">
                     <span class="date">12/09/2021</span>
                     <h2>29606</h2>
@@ -141,8 +140,7 @@
             </div>
 
             <div class="card">
-                <div class="card-image"> <img src="C:/Users/admin/Git/Kazanto/product-cards-template/resources/img1.jpg"
-                        class="imagemcard"> </div>
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
                 <div class="card-text">
                     <span class="date">12/09/2021</span>
                     <h2>29606</h2>
@@ -162,8 +160,7 @@
             </div>
 
             <div class="card">
-                <div class="card-image"> <img src="C:/Users/admin/Git/Kazanto/product-cards-template/resources/img1.jpg"
-                        class="imagemcard"> </div>
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
                 <div class="card-text">
                     <span class="date">12/09/2021</span>
                     <h2>29606</h2>
@@ -183,8 +180,7 @@
             </div>
 
             <div class="card">
-                <div class="card-image"> <img src="C:/Users/admin/Git/Kazanto/product-cards-template/resources/img1.jpg"
-                        class="imagemcard"> </div>
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
                 <div class="card-text">
                     <span class="date">12/09/2021</span>
                     <h2>29606</h2>
@@ -204,8 +200,26 @@
             </div>
 
             <div class="card">
-                <div class="card-image"> <img src="C:/Users/admin/Git/Kazanto/product-cards-template/resources/img1.jpg"
-                        class="imagemcard"> </div>
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
+                <div class="card-text">
+                    <span class="date">12/09/2021</span>
+                    <h2>29606</h2>
+                    <p>20354-RB26 MOCHILA ROMER BRITTO 29X14X45</p>
+                </div>
+                <div class="card-stats">
+                    <div class="stat">
+                        <div class="status">separado</div>
+                    </div>
+                    <div class="stat border">
+                        <div class="status">editado</div>
+                    </div>
+                    <div class="stat">
+                        <div class="status">finalizado</div>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
                 <div class="card-text">
                     <span class="date">12/09/2021</span>
                     <h2>29606</h2>
@@ -225,8 +239,7 @@
             </div>
 
             <div class="card">
-                <div class="card-image"> <img src="C:/Users/admin/Git/Kazanto/product-cards-template/resources/img1.jpg"
-                        class="imagemcard"> </div>
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
                 <div class="card-text">
                     <span class="date">12/09/2021</span>
                     <h2>29606</h2>
@@ -246,8 +259,7 @@
             </div>
 
             <div class="card">
-                <div class="card-image"> <img src="C:/Users/admin/Git/Kazanto/product-cards-template/resources/img1.jpg"
-                        class="imagemcard"> </div>
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
                 <div class="card-text">
                     <span class="date">12/09/2021</span>
                     <h2>29606</h2>
@@ -267,8 +279,7 @@
             </div>
 
             <div class="card">
-                <div class="card-image"> <img src="C:/Users/admin/Git/Kazanto/product-cards-template/resources/img1.jpg"
-                        class="imagemcard"> </div>
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
                 <div class="card-text">
                     <span class="date">12/09/2021</span>
                     <h2>29606</h2>
@@ -288,8 +299,7 @@
             </div>
 
             <div class="card">
-                <div class="card-image"> <img src="C:/Users/admin/Git/Kazanto/product-cards-template/resources/img1.jpg"
-                        class="imagemcard"> </div>
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
                 <div class="card-text">
                     <span class="date">12/09/2021</span>
                     <h2>29606</h2>
@@ -309,8 +319,7 @@
             </div>
 
             <div class="card">
-                <div class="card-image"> <img src="C:/Users/admin/Git/Kazanto/product-cards-template/resources/img1.jpg"
-                        class="imagemcard"> </div>
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
                 <div class="card-text">
                     <span class="date">12/09/2021</span>
                     <h2>29606</h2>
@@ -330,8 +339,7 @@
             </div>
 
             <div class="card">
-                <div class="card-image"> <img src="C:/Users/admin/Git/Kazanto/product-cards-template/resources/img1.jpg"
-                        class="imagemcard"> </div>
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
                 <div class="card-text">
                     <span class="date">12/09/2021</span>
                     <h2>29606</h2>
@@ -349,6 +357,127 @@
                     </div>
                 </div>
             </div>
+
+            <div class="card">
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
+                <div class="card-text">
+                    <span class="date">12/09/2021</span>
+                    <h2>29606</h2>
+                    <p>20354-RB26 MOCHILA ROMER BRITTO 29X14X45</p>
+                </div>
+                <div class="card-stats">
+                    <div class="stat">
+                        <div class="status">separado</div>
+                    </div>
+                    <div class="stat border">
+                        <div class="status">editado</div>
+                    </div>
+                    <div class="stat">
+                        <div class="status">finalizado</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
+                <div class="card-text">
+                    <span class="date">12/09/2021</span>
+                    <h2>29606</h2>
+                    <p>20354-RB26 MOCHILA ROMER BRITTO 29X14X45</p>
+                </div>
+                <div class="card-stats">
+                    <div class="stat">
+                        <div class="status">separado</div>
+                    </div>
+                    <div class="stat border">
+                        <div class="status">editado</div>
+                    </div>
+                    <div class="stat">
+                        <div class="status">finalizado</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
+                <div class="card-text">
+                    <span class="date">12/09/2021</span>
+                    <h2>29606</h2>
+                    <p>20354-RB26 MOCHILA ROMER BRITTO 29X14X45</p>
+                </div>
+                <div class="card-stats">
+                    <div class="stat">
+                        <div class="status">separado</div>
+                    </div>
+                    <div class="stat border">
+                        <div class="status">editado</div>
+                    </div>
+                    <div class="stat">
+                        <div class="status">finalizado</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
+                <div class="card-text">
+                    <span class="date">12/09/2021</span>
+                    <h2>29606</h2>
+                    <p>20354-RB26 MOCHILA ROMER BRITTO 29X14X45</p>
+                </div>
+                <div class="card-stats">
+                    <div class="stat">
+                        <div class="status">separado</div>
+                    </div>
+                    <div class="stat border">
+                        <div class="status">editado</div>
+                    </div>
+                    <div class="stat">
+                        <div class="status">finalizado</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
+                <div class="card-text">
+                    <span class="date">12/09/2021</span>
+                    <h2>29606</h2>
+                    <p>20354-RB26 MOCHILA ROMER BRITTO 29X14X45</p>
+                </div>
+                <div class="card-stats">
+                    <div class="stat">
+                        <div class="status">separado</div>
+                    </div>
+                    <div class="stat border">
+                        <div class="status">editado</div>
+                    </div>
+                    <div class="stat">
+                        <div class="status">finalizado</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
+                <div class="card-text">
+                    <span class="date">12/09/2021</span>
+                    <h2>29606</h2>
+                    <p>20354-RB26 MOCHILA ROMER BRITTO 29X14X45</p>
+                </div>
+                <div class="card-stats">
+                    <div class="stat">
+                        <div class="status">separado</div>
+                    </div>
+                    <div class="stat border">
+                        <div class="status">editado</div>
+                    </div>
+                    <div class="stat">
+                        <div class="status">finalizado</div>
+                    </div>
+                </div>
+            </div>
+
         </ul>
     </div>
 </body>
