--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                 </div>
                 <div class="card-stats">
                     <div class="stat">
-                        <div class="status">separado</div>
+                        <div class="status-sep">separado</div>
                     </div>
                     <div class="stat border">
-                        <div class="status">editado</div>
+                        <div class="status-edit">editado</div>
                     </div>
                     <div class="stat">
-                        <div class="status">finalizado</div>
+                        <div class="status-fin">finalizado</div>
                     </div>
                 </div>
             </div>
