adicionando uma tag <a> para tornar os cards clicáveis

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="container">
         <ul>
             <div class="card">
+                <a class="card-link" href="https://www.google.com.br/" target="_blank"></a>
                 <div class="card-image"> <img src="resources/img1.jpg"> </div>
                 <div class="card-text">
                     <span class="date">12/09/2021</span>
@@ -39,26 +40,7 @@
             </div>
 
             <div class="card">
-                <div class="card-image"> <img src="resources/img2.jpg"> </div>
-                <div class="card-text">
-                    <span class="date">12/09/2021</span>
-                    <h2>29606</h2>
-                    <p>20354-RB26 MOCHILA ROMER BRITTO 29X14X45</p>
-                </div>
-                <div class="card-stats">
-                    <div class="stat">
-                        <div class="status">separado</div>
-                    </div>
-                    <div class="stat border">
-                        <div class="status">editado</div>
-                    </div>
-                    <div class="stat">
-                        <div class="status">finalizado</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
+                <a class="card-link" href="https://www.google.com.br/" target="_blank"></a>
                 <div class="card-image"> <img src="resources/img1.jpg"> </div>
                 <div class="card-text">
                     <span class="date">12/09/2021</span>
@@ -67,58 +49,19 @@
                 </div>
                 <div class="card-stats">
                     <div class="stat">
-                        <div class="status">separado</div>
+                        <div class="status-sep">separado</div>
                     </div>
                     <div class="stat border">
-                        <div class="status">editado</div>
+                        <div class="status-edit">editado</div>
                     </div>
                     <div class="stat">
-                        <div class="status">finalizado</div>
+                        <div class="status-fin">finalizado</div>
                     </div>
                 </div>
             </div>
 
             <div class="card">
-                <div class="card-image"> <img src="resources/img2.jpg"> </div>
-                <div class="card-text">
-                    <span class="date">12/09/2021</span>
-                    <h2>29606</h2>
-                    <p>20354-RB26 MOCHILA ROMER BRITTO 29X14X45</p>
-                </div>
-                <div class="card-stats">
-                    <div class="stat">
-                        <div class="status">separado</div>
-                    </div>
-                    <div class="stat border">
-                        <div class="status">editado</div>
-                    </div>
-                    <div class="stat">
-                        <div class="status">finalizado</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="card-image"> <img src="resources/img2.jpg"> </div>
-                <div class="card-text">
-                    <span class="date">12/09/2021</span>
-                    <h2>29606</h2>
-                    <p>20354-RB26 MOCHILA ROMER BRITTO 29X14X45</p>
-                </div>
-                <div class="card-stats">
-                    <div class="stat">
-                        <div class="status">separado</div>
-                    </div>
-                    <div class="stat border">
-                        <div class="status">editado</div>
-                    </div>
-                    <div class="stat">
-                        <div class="status">finalizado</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
+                <a class="card-link" href="https://www.google.com.br/" target="_blank"></a>
                 <div class="card-image"> <img src="resources/img1.jpg"> </div>
                 <div class="card-text">
                     <span class="date">12/09/2021</span>
@@ -127,58 +70,19 @@
                 </div>
                 <div class="card-stats">
                     <div class="stat">
-                        <div class="status">separado</div>
+                        <div class="status-sep">separado</div>
                     </div>
                     <div class="stat border">
-                        <div class="status">editado</div>
+                        <div class="status-edit">editado</div>
                     </div>
                     <div class="stat">
-                        <div class="status">finalizado</div>
+                        <div class="status-fin">finalizado</div>
                     </div>
                 </div>
             </div>
 
             <div class="card">
-                <div class="card-image"> <img src="resources/img2.jpg"> </div>
-                <div class="card-text">
-                    <span class="date">12/09/2021</span>
-                    <h2>29606</h2>
-                    <p>20354-RB26 MOCHILA ROMER BRITTO 29X14X45</p>
-                </div>
-                <div class="card-stats">
-                    <div class="stat">
-                        <div class="status">separado</div>
-                    </div>
-                    <div class="stat border">
-                        <div class="status">editado</div>
-                    </div>
-                    <div class="stat">
-                        <div class="status">finalizado</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="card-image"> <img src="resources/img2.jpg"> </div>
-                <div class="card-text">
-                    <span class="date">12/09/2021</span>
-                    <h2>29606</h2>
-                    <p>20354-RB26 MOCHILA ROMER BRITTO 29X14X45</p>
-                </div>
-                <div class="card-stats">
-                    <div class="stat">
-                        <div class="status">separado</div>
-                    </div>
-                    <div class="stat border">
-                        <div class="status">editado</div>
-                    </div>
-                    <div class="stat">
-                        <div class="status">finalizado</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card">
+                <a class="card-link" href="https://www.google.com.br/" target="_blank"></a>
                 <div class="card-image"> <img src="resources/img1.jpg"> </div>
                 <div class="card-text">
                     <span class="date">12/09/2021</span>
@@ -187,37 +91,19 @@
                 </div>
                 <div class="card-stats">
                     <div class="stat">
-                        <div class="status">separado</div>
+                        <div class="status-sep">separado</div>
                     </div>
                     <div class="stat border">
-                        <div class="status">editado</div>
+                        <div class="status-edit">editado</div>
                     </div>
                     <div class="stat">
-                        <div class="status">finalizado</div>
+                        <div class="status-fin">finalizado</div>
                     </div>
                 </div>
             </div>
 
             <div class="card">
-                <div class="card-image"> <img src="resources/img2.jpg"> </div>
-                <div class="card-text">
-                    <span class="date">12/09/2021</span>
-                    <h2>29606</h2>
-                    <p>20354-RB26 MOCHILA ROMER BRITTO 29X14X45</p>
-                </div>
-                <div class="card-stats">
-                    <div class="stat">
-                        <div class="status">separado</div>
-                    </div>
-                    <div class="stat border">
-                        <div class="status">editado</div>
-                    </div>
-                    <div class="stat">
-                        <div class="status">finalizado</div>
-                    </div>
-                </div>
-            </div>
-            <div class="card">
+                <a class="card-link" href="https://www.google.com.br/" target="_blank"></a>
                 <div class="card-image"> <img src="resources/img1.jpg"> </div>
                 <div class="card-text">
                     <span class="date">12/09/2021</span>
@@ -226,17 +112,143 @@
                 </div>
                 <div class="card-stats">
                     <div class="stat">
-                        <div class="status">separado</div>
+                        <div class="status-sep">separado</div>
                     </div>
                     <div class="stat border">
-                        <div class="status">editado</div>
+                        <div class="status-edit">editado</div>
                     </div>
                     <div class="stat">
-                        <div class="status">finalizado</div>
+                        <div class="status-fin">finalizado</div>
                     </div>
                 </div>
             </div>
 
+            <div class="card">
+                <a class="card-link" href="https://www.google.com.br/" target="_blank"></a>
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
+                <div class="card-text">
+                    <span class="date">12/09/2021</span>
+                    <h2>29606</h2>
+                    <p>20354-RB26 MOCHILA ROMER BRITTO 29X14X45</p>
+                </div>
+                <div class="card-stats">
+                    <div class="stat">
+                        <div class="status-sep">separado</div>
+                    </div>
+                    <div class="stat border">
+                        <div class="status-edit">editado</div>
+                    </div>
+                    <div class="stat">
+                        <div class="status-fin">finalizado</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <a class="card-link" href="https://www.google.com.br/" target="_blank"></a>
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
+                <div class="card-text">
+                    <span class="date">12/09/2021</span>
+                    <h2>29606</h2>
+                    <p>20354-RB26 MOCHILA ROMER BRITTO 29X14X45</p>
+                </div>
+                <div class="card-stats">
+                    <div class="stat">
+                        <div class="status-sep">separado</div>
+                    </div>
+                    <div class="stat border">
+                        <div class="status-edit">editado</div>
+                    </div>
+                    <div class="stat">
+                        <div class="status-fin">finalizado</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <a class="card-link" href="https://www.google.com.br/" target="_blank"></a>
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
+                <div class="card-text">
+                    <span class="date">12/09/2021</span>
+                    <h2>29606</h2>
+                    <p>20354-RB26 MOCHILA ROMER BRITTO 29X14X45</p>
+                </div>
+                <div class="card-stats">
+                    <div class="stat">
+                        <div class="status-sep">separado</div>
+                    </div>
+                    <div class="stat border">
+                        <div class="status-edit">editado</div>
+                    </div>
+                    <div class="stat">
+                        <div class="status-fin">finalizado</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <a class="card-link" href="https://www.google.com.br/" target="_blank"></a>
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
+                <div class="card-text">
+                    <span class="date">12/09/2021</span>
+                    <h2>29606</h2>
+                    <p>20354-RB26 MOCHILA ROMER BRITTO 29X14X45</p>
+                </div>
+                <div class="card-stats">
+                    <div class="stat">
+                        <div class="status-sep">separado</div>
+                    </div>
+                    <div class="stat border">
+                        <div class="status-edit">editado</div>
+                    </div>
+                    <div class="stat">
+                        <div class="status-fin">finalizado</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <a class="card-link" href="https://www.google.com.br/" target="_blank"></a>
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
+                <div class="card-text">
+                    <span class="date">12/09/2021</span>
+                    <h2>29606</h2>
+                    <p>20354-RB26 MOCHILA ROMER BRITTO 29X14X45</p>
+                </div>
+                <div class="card-stats">
+                    <div class="stat">
+                        <div class="status-sep">separado</div>
+                    </div>
+                    <div class="stat border">
+                        <div class="status-edit">editado</div>
+                    </div>
+                    <div class="stat">
+                        <div class="status-fin">finalizado</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <a class="card-link" href="https://www.google.com.br/" target="_blank"></a>
+                <div class="card-image"> <img src="resources/img1.jpg"> </div>
+                <div class="card-text">
+                    <span class="date">12/09/2021</span>
+                    <h2>29606</h2>
+                    <p>20354-RB26 MOCHILA ROMER BRITTO 29X14X45</p>
+                </div>
+                <div class="card-stats">
+                    <div class="stat">
+                        <div class="status-sep">separado</div>
+                    </div>
+                    <div class="stat border">
+                        <div class="status-edit">editado</div>
+                    </div>
+                    <div class="stat">
+                        <div class="status-fin">finalizado</div>
+                    </div>
+                </div>
+            </div>
+            
         </ul>
     </div>
 </body>
