--- a/index.html
+++ b/index.html
@@ -16,10 +16,17 @@
         </div>
     </header>
 
+    <form class="caixa-search" action="https://www.google.com.br/">
+        <input class="caixa-texto" type="text" name="" placeholder="Pesquisar código winthor">
+        <a class="botao-search" href="https://www.google.com.br/">
+            <img src="resources/lupa1.png" alt="pesquisar">
+        </a>
+    </form>
+
     <div class="container">
         <ul>
             <div class="card">
-                <a class="card-link" href="https://www.google.com.br/" target="_blank"></a>
+                <a class="card-link" href="https://www.google.com.br/"></a>
                 <div class="card-image"> <img src="resources/img1.jpg"> </div>
                 <div class="card-text">
                     <span class="date">12/09/2021</span>
@@ -208,7 +215,7 @@
             </div>
 
             <div class="card">
-                <a class="card-link" href="https://www.google.com.br/" target="_blank"></a>
+                <a class="card-link" href="https://www.google.com.br/"></a>
                 <div class="card-image"> <img src="resources/img1.jpg"> </div>
                 <div class="card-text">
                     <span class="date">12/09/2021</span>
@@ -248,7 +255,7 @@
                     </div>
                 </div>
             </div>
-            
+
         </ul>
     </div>
 </body>
