aplicando theme-color

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="shotcut icon" href="resources/favicon.png">
+    <meta name="theme-color" content="#e41021">
+    <link rel="shortcut icon" href="resources/favicon.png">
     <title>Cadastro e-commerce</title>
     <link rel="stylesheet" href="style.css">
 </head>
