--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <title>Cadastro e-commerce</title>
     <meta name="theme-color" content="#e41021">
-    <link rel="shortcut icon" href="resources/favicon.png">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="reset.css">
+    <link rel="shortcut icon" href="img/favicon.png">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/reset.css">
 </head>
 
 <body>
@@ -33,14 +33,14 @@
     <form class="caixa-search" action="https://www.kazanto.com.br/">
         <input class="caixa-texto" type="number" name="codprod" placeholder="Pesquisar código winthor">
         <button class="botao-search">
-            <img src="resources/lupa1.png" alt="pesquisar">
+            <img src="img/lupa1.png" alt="pesquisar">
         </button>
     </form>
 
     <a class="link-home" href="index.html#">
         <div class="botao-home">
             <div class="botao-icone">
-                <img src="resources/home.png" alt="home">
+                <img src="img/home.png" alt="home">
             </div>
         </div>
     </a>
@@ -51,7 +51,7 @@
                 <!--Card-->
                 <a class="card-link" href="https://www.kazanto.com.br/">
                     <div class="card">
-                        <div class="card-image"> <img src="resources/img1.jpg"> </div>
+                        <div class="card-image"> <img src="img/img1.jpg"> </div>
                         <div class="card-text">
                             <span class="date">12/09/2021</span>
                             <h2>29606</h2>
@@ -74,7 +74,7 @@
                 <!--Card-->
                 <a class="card-link" href="https://www.kazanto.com.br/">
                     <div class="card">
-                        <div class="card-image"> <img src="resources/img2.jpg"> </div>
+                        <div class="card-image"> <img src="img/img2.jpg"> </div>
                         <div class="card-text">
                             <span class="date">12/09/2021</span>
                             <h2>29607</h2>
@@ -97,7 +97,7 @@
                 <!--Card-->
                 <a class="card-link" href="https://www.kazanto.com.br/">
                     <div class="card">
-                        <div class="card-image"> <img src="resources/img1.jpg"> </div>
+                        <div class="card-image"> <img src="img/img1.jpg"> </div>
                         <div class="card-text">
                             <span class="date">12/09/2021</span>
                             <h2>29606</h2>
@@ -120,7 +120,7 @@
                 <!--Card-->
                 <a class="card-link" href="https://www.kazanto.com.br/">
                     <div class="card">
-                        <div class="card-image"> <img src="resources/img2.jpg"> </div>
+                        <div class="card-image"> <img src="img/img2.jpg"> </div>
                         <div class="card-text">
                             <span class="date">12/09/2021</span>
                             <h2>29607</h2>
@@ -143,7 +143,7 @@
                 <!--Card-->
                 <a class="card-link" href="https://www.kazanto.com.br/">
                     <div class="card">
-                        <div class="card-image"> <img src="resources/img1.jpg"> </div>
+                        <div class="card-image"> <img src="img/img1.jpg"> </div>
                         <div class="card-text">
                             <span class="date">12/09/2021</span>
                             <h2>29606</h2>
@@ -166,7 +166,7 @@
                 <!--Card-->
                 <a class="card-link" href="https://www.kazanto.com.br/">
                     <div class="card">
-                        <div class="card-image"> <img src="resources/img2.jpg"> </div>
+                        <div class="card-image"> <img src="img/img2.jpg"> </div>
                         <div class="card-text">
                             <span class="date">12/09/2021</span>
                             <h2>29607</h2>
@@ -189,7 +189,7 @@
                 <!--Card-->
                 <a class="card-link" href="https://www.kazanto.com.br/">
                     <div class="card">
-                        <div class="card-image"> <img src="resources/img1.jpg"> </div>
+                        <div class="card-image"> <img src="img/img1.jpg"> </div>
                         <div class="card-text">
                             <span class="date">12/09/2021</span>
                             <h2>29606</h2>
@@ -212,7 +212,7 @@
                 <!--Card-->
                 <a class="card-link" href="https://www.kazanto.com.br/">
                     <div class="card">
-                        <div class="card-image"> <img src="resources/img2.jpg"> </div>
+                        <div class="card-image"> <img src="img/img2.jpg"> </div>
                         <div class="card-text">
                             <span class="date">12/09/2021</span>
                             <h2>29607</h2>
